--- a/src/Pages/cart/producto/Producto.module.css
+++ b/src/Pages/cart/producto/Producto.module.css
@@ -7,15 +7,23 @@
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   align-content: stretch;
+  gap: 60px;
 
   margin: 20px 0;
   width: 100%;
 }
 
 .bannerLeft {
+  width: 50%;
+  height: 400px;
+}
+
+.productoImagen {
   width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .title {
@@ -29,12 +37,13 @@
 .descripcion {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 60px;
 }
 
 .categoria {
   margin: 20px 0;
+  font-size: .8rem;
 }
 
 .cantidadContainer button {
