--- a/src/Pages/dashboard/principal/Dashboard.module.css
+++ b/src/Pages/dashboard/principal/Dashboard.module.css
@@ -87,7 +87,6 @@
 .topCategorias .list {
   list-style: none;
   padding: 0;
-  margin-top: 10px;
 }
 
 .topCategorias .item {
@@ -111,6 +110,10 @@
 
 /* Ultimas Cotizaciones */
 .lastCotizaciones .list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 20px;
   list-style: none;
   padding: 0;
   margin-top: 10px;
@@ -118,7 +121,10 @@
 
 .lastCotizaciones .item {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  gap: 10px;
   padding: 8px 12px;
   margin-bottom: 6px;
   background: #fff5f5;
@@ -133,7 +139,6 @@
 
 .lastCotizaciones .estado {
   font-size: 12px;
-  margin-left: 6px;
   color: #666;
 }
 
@@ -144,14 +149,20 @@
 
 /* Mensajes */
 .messages .list {
+  display: flex;
+  flex-direction: column;
   list-style: none;
   padding: 0;
   margin-top: 10px;
+  gap:5px;
 }
 
 .messages .item {
-  padding: 8px 12px;
-  margin-bottom: 6px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  padding:12px;
   border: 1px solid #ddd;
   border-radius: 6px;
   background: #f9f9f9;
