--- a/src/Pages/dashboard/cotizaciondetail/CotizacionDetalle.module.css
+++ b/src/Pages/dashboard/cotizaciondetail/CotizacionDetalle.module.css
@@ -133,17 +133,23 @@
   font-style: Bold;
   font-size: 20px;
 }
+.pdfContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
 
 .pdfButton {
-  margin-right: 10px;
-  padding: 10px 20px;
+  padding: 10px 15px;
   background-color: white;
-  color: var(--primary-color);
   border: 1px solid var(--primary-color);
   border-radius: 8px;
   cursor: pointer;
   text-decoration: none;
   color: inherit;
+  font-size: 14px;
 }
 
 .pdfButton:hover {
@@ -185,6 +191,7 @@
 }
 
 .addButton,
+.addPdfButton,
 .cancelButton {
   flex: 1;
   height: 45px;
