--- a/src/Pages/dashboard/principal/Dashboard.module.css
+++ b/src/Pages/dashboard/principal/Dashboard.module.css
@@ -40,6 +40,16 @@
   gap: 20px;
 }
 
+.chartsContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: stretch;
+  gap: 20px;
+}
+
 .right {
   flex: 1;
   display: flex;
