--- a/src/Pages/dashboard/principal/Dashboard.module.css
+++ b/src/Pages/dashboard/principal/Dashboard.module.css
@@ -16,7 +16,7 @@
   display: flex;
   gap: 20px;
   padding: 20px;
-  padding: 48px 140px;
+  /* padding: 48px 140px; */
   background-color: #f9fafb; /* gris muy claro */
   border-radius: 12px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
@@ -63,6 +63,11 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+
+.categorias {
+  width: 100%;
+  height: auto;
 }
 
 .headerRight {
