--- a/src/Components/dashboard/statushistorytable/StatusHistoryTable.module.css
+++ b/src/Components/dashboard/statushistorytable/StatusHistoryTable.module.css
@@ -18,6 +18,7 @@
   font-weight: 600;
   color: #333;
   border-bottom: 1px solid #e5e7eb;
+  text-align: center;
 }
 
 .table td {
@@ -33,8 +34,12 @@
 }
 
 .statusRow {
-  display: flex;
-  align-items: center;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-evenly;
+	align-items: center;
+	align-content: stretch;
   gap: 0.5rem;
 }
 
