--- a/src/Components/dashboard/statushistorytable/StatusHistoryTable.module.css
+++ b/src/Components/dashboard/statushistorytable/StatusHistoryTable.module.css
@@ -13,13 +13,14 @@
 }
 
 .table th {
-  text-align: left;
   padding: 12px 16px;
-  font-size: 0.9rem;
-  font-weight: 600;
   color: var(--primary-color);
   border-bottom: 1px solid #e5e7eb;
   text-align: center;
+  font-size: 16px;
+  font-weight: 600;
+  max-width: 70%;
+  word-break: break-word;
 }
 
 .table td {
@@ -35,12 +36,12 @@
 }
 
 .statusRow {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	justify-content: space-evenly;
-	align-items: center;
-	align-content: stretch;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: stretch;
   gap: 0.5rem;
 }
 
