--- a/src/Pages/auth/login/Login.module.css
+++ b/src/Pages/auth/login/Login.module.css
@@ -43,6 +43,7 @@
 }
 
 .inputGroup {
+  position: relative;
   margin-bottom: 20px;
   display: flex;
   flex-direction: column;
@@ -58,8 +59,8 @@
 }
 
 .input {
+  padding: 0px 40px;
   height: 40px;
-  padding: 0 12px;
   border: 1px solid #000000;
   border-radius: 8px;
 }
@@ -70,6 +71,27 @@
   font-style: SemiBold;
   font-size: 14px;
   line-height: 60px;
+}
+.inputIcon {
+  position: absolute;
+  top: 60%;
+  left: 12px;
+  transform: translateY(10px);
+  width: 20px;
+  height: 20px;
+  pointer-events: none;
+  opacity: 0.6;
+}
+
+.inputIconRight {
+  position: absolute;
+  top: 60%;
+  right: 12px;
+  transform: translateY(10px);
+  width: 22px;
+  height: 22px;
+  cursor: pointer;
+  opacity: 0.8;
 }
 
 .button {
